--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -272,7 +272,7 @@ strong, b{
 
 .solid-btn:hover{
     background: transparent;
-    color: #202877;
+    color:  rgba(8,38,140,0.8323704481792717);
     -webkit-box-shadow: none;
     box-shadow: none;
 }
@@ -492,7 +492,7 @@ select.form-control.has-value{
     opacity: 0.8;
 }
 .affix {
-    background-color: #202877;
+    background-color:  rgba(8,38,140,0.8323704481792717);
     -webkit-transition:padding 0.2s ease-out;
     -moz-transition:padding 0.2s ease-out;
     -o-transition:padding 0.2s ease-out;
@@ -518,14 +518,14 @@ select.form-control.has-value{
     opacity: 1;
 }
 .bg-transparent.affix{
-    background-image: linear-gradient(to right, rgba(32, 82, 154, 1), rgba(52, 102, 164, 1)) !important;
+    background-image: linear-gradient(90deg, rgba(8,38,140,0.8323704481792717),rgba(32,82,154,1), rgba(32,82,154,1),  rgba(32,82,154,1), rgba(32,82,154,1));
 }
 .navbar{
     transition: all .3s ease-in-out;
 }
 @media (min-width: 320px) and (max-width: 992px){
     .navbar{
-        background: #202877 !important;
+        background:  rgba(8,38,140,0.8323704481792717) !important;
         padding: .95rem 1rem;
     }
 
@@ -537,7 +537,7 @@ select.form-control.has-value{
         color: #081d43 !important;
     }
     .white-bg.navbar .navbar-toggler span{
-        color: #202877;
+        color:  rgba(8,38,140,0.8323704481792717);
     }
 
     .main-menu ul>li .submenu{
@@ -798,7 +798,7 @@ select.form-control.has-value{
 .hero-7:before{
     position: absolute;
     content: '';
-    background: rgba(0, 67, 139, 0.85);
+    background:  rgba(8,38,140,0.8323704481792717);
     width: 100%;
     height: 100%;
     left: 0;
@@ -1313,7 +1313,7 @@ select.form-control.has-value{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-image: linear-gradient(to right, rgba(32, 40, 119, 0.64), rgba(55, 46, 149, 0.65), rgba(83, 49, 177, 0.72), rgba(114, 48, 205, 0.62), rgba(150, 41, 230, 0.6));
+    background-image: linear-gradient(90deg, rgba(8,38,140,0.8323704481792717),rgba(32,82,154,1), rgba(32,82,154,1),  rgba(32,82,154,1), rgba(32,82,154,1));
 }
 
 
@@ -1811,7 +1811,7 @@ select.form-control.has-value{
 .background-img:before{
     position: absolute;
     content: '';
-    background-image: linear-gradient(to right, rgba(32, 40, 119, 0.95), rgba(55, 46, 149, 0.95), rgba(83, 49, 177, 0.90), rgba(114, 48, 205, 0.85), rgba(150, 41, 230, 0.95));
+    background-image: linear-gradient(90deg, rgba(8,38,140,0.8323704481792717),rgba(32,82,154,1), rgba(32,82,154,1),  rgba(32,82,154,1), rgba(32,82,154,1));
     width: 100%;
     height: 100%;
     top: 0;
@@ -1958,7 +1958,7 @@ select.form-control.has-value{
 .single-pricing-pack:hover {
     box-shadow: 0 1rem 3rem rgba(31,45,61,.125)!important;
     transform: translate(0, -5px);
-    border-top: 4px solid #9629e6;
+    border-top: 4px solid #FFFFFF;
 }
 .single-pricing-pack .card-body {
     color: rgb(132, 146, 166);
@@ -2110,7 +2110,7 @@ select.form-control.has-value{
 }
 .testimonial-wrap span.icon{
     font-size: 35px;
-    color: #202877;
+    color:  rgba(8,38,140,0.8323704481792717);
 }
 .testimonial-wrap blockquote{
     overflow: hidden;
@@ -2276,7 +2276,7 @@ blockquote:before {
     background: #9629e6;
 }
 .list-creative .phone::before {
-    background: #202877;
+    background:  rgba(8,38,140,0.8323704481792717);
 }
 .list-creative .email::before {
     background: #007bff;
@@ -2304,7 +2304,7 @@ blockquote:before {
 
 /*our team css*/
 .single-team-member .team-info {
-    background-image: linear-gradient(to right, rgba(32, 40, 119, 0.85), rgba(55, 46, 149, 0.9), rgba(83, 49, 177, 0.85), rgba(114, 48, 205, 0.8), rgba(150, 41, 230, 0.8));
+    background-image: linear-gradient(90deg, rgba(8,38,140,0.8323704481792717),rgba(32,82,154,1), rgba(32,82,154,1),  rgba(32,82,154,1), rgba(32,82,154,1));
     opacity: 0;
     visibility: hidden;
     -webkit-transition: opacity 0.3s, visibility 0.3s;
@@ -2501,7 +2501,7 @@ blockquote:before {
     padding: 6px;
 }
 .social-list li a, .copyright-text a{
-    color: #202877;
+    color:  rgba(8,38,140,0.8323704481792717);
     opacity: 0.8;
 }
 
@@ -2742,12 +2742,12 @@ a.detail-link span {
     vertical-align: middle;
     -webkit-transition-duration: .3s;
     transition-duration: .3s;
-    color: #202877;
+    color:  rgba(8,38,140,0.8323704481792717);
 }
 
 
 a.detail-link:hover {
-    color: #202877;
+    color:  rgba(8,38,140,0.8323704481792717);
 }
 a.detail-link:hover span{
     transform: translateX(3px);
@@ -2796,7 +2796,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     color: #5d5d5d;
 }
 .post-header .post-title a:hover{
-    color: #202877;
+    color:  rgba(8,38,140,0.8323704481792717);
 }
 .post-meta {
     list-style: none;
@@ -2809,7 +2809,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     opacity: 0.8;
 }
 .post-meta a:hover{
-    color: #202877;
+    color:  rgba(8,38,140,0.8323704481792717);
     opacity: 1;
 }
 .post-meta > li {
@@ -2845,7 +2845,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     transition: all .3s ease-in-out;
 }
 .post-content blockquote:hover {
-    border-color: #202877;
+    border-color:  rgba(8,38,140,0.8323704481792717);
 }
 .blockquote {
     font-weight: 500;
@@ -2895,7 +2895,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     opacity: .6;
 }
 .comment-meta-date a:hover, .comment-meta-date a:focus, .comment-meta-date-shop a:hover, .comment-meta-date-shop a:focus {
-    color: #202877;
+    color:  rgba(8,38,140,0.8323704481792717);
     opacity: 1;
 }
 
@@ -2914,7 +2914,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     color: #222;
 }
 .comment-reply > a:hover, .comment-reply > a:focus, .comment-reply-shop > a:hover, .comment-reply-shop > a:focus {
-    background: #202877;
+    background:  rgba(8,38,140,0.8323704481792717);
     color: #fff;
 }
 
@@ -3008,7 +3008,7 @@ button, [type="button"], [type="reset"], [type="submit"] {
     font-size: 14px;
 }
 .widget a:hover{
-    color: #202877;
+    color:  rgba(8,38,140,0.8323704481792717);
 }
 .widget-recent-entries-custom .wi {
     float: left;
@@ -3042,7 +3042,7 @@ button, [type="button"], [type="reset"], [type="submit"] {
     font-family: 'Montserrat', sans-serif;
 }
 .tag-cloud > a:hover, .post-tags > a:hover {
-    background: #202877;
+    background:  rgba(8,38,140,0.8323704481792717);
     color: #fff;
     opacity: 1;
 }
